# rdashboard

./: .gitignore  Cargo.toml  PLAN.md  README.md  package.json
config/: source-projects.json
config/project-manifests/: README.md  ralert.json  rdashboard.json  rimg.json  telegram-gateway.json
config/schema/: README.md  project-manifest-v1.json  project-manifest-v2.json
deploy/systemd/: README.md  ROOTLESS_OCI.md  SELF_UPDATE.md  rdashboard-bootstrap.service  rdashboard-buildkit.service  rdashboard-buildkitd.toml  rdashboard-dependency-fetcher.service  rdashboard-notifier.conf  (+30 more)
src/: adapter.rs  adapter_entrypoint.rs  adapter_identity.rs  adapter_phase.rs  adapter_result.rs  authorization.rs  backup.rs  backup_driver.rs  build.rs  build_attestation.rs  build_source.rs  build_storage.rs  cargo_prefetch.rs  controller.rs  dependency_fetch.rs  deploy_driver.rs  execution_receipt.rs  executor.rs  executor_authority.rs  executor_intent.rs  executor_socket.rs  fence_adapter.rs  fence_job.rs  installed_clock.rs  installed_deploy.rs  installed_effects.rs  installed_intent_resolver.rs  installed_policy.rs  installed_source.rs  installed_workflow.rs  integration_collectors.rs  integrations.rs  lib.rs  mutation_admission.rs  native_release.rs  notification_delivery.rs  notification_planner.rs  notifications.rs  notifier_socket.rs  observer.rs  (+28 more)
tests/: authorization_contracts.rs  browser_status.test.js  controller_contracts.rs  domain_contracts.rs  executor_intent_contracts.rs  executor_recovery.rs  executor_socket.rs  failure_receipt_contracts.rs  metrics_contracts.rs  observer_contracts.rs  phase6_contracts.rs  project_manifest_catalog.rs  source_build_contracts.rs  source_delivery_contracts.rs  source_ingress_contracts.rs  store_and_web.rs  worker_socket_contracts.rs  workflow_launcher_socket_contracts.rs  workflow_scheduler_contracts.rs  workflow_worker_contracts.rs
web/: app.css  app.js  index.html  status.js
(+157 files in other folders)
