[package]
name = "rdashboard"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false
default-run = "rdashboardd"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
base64 = "0.22"
ed25519-dalek = "2.2"
fs2 = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
futures-util = "0.3"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
minicbor = { version = "2.2.2", features = ["derive", "std"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
rustix = { version = "1.1", features = ["fs", "time"] }
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tar = { version = "0.4", default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1"
tower-http = { version = "0.6", features = ["set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = "1"

[dev-dependencies]
http-body-util = "0.1"
proptest = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "debuginfo"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
